--- a/wp-content/themes/IDL/less/vars.less
+++ b/wp-content/themes/IDL/less/vars.less
@@ -43,6 +43,7 @@
 ////////////
 
 // Template colors
+@bg-color: 		#f8f8f8;
 @red: 			#f77278;
 @grey: 			#999;
 
